--- a/user_demo/Dockerfile
+++ b/user_demo/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:18.04
 LABEL authour='DK'
 LABEL organiasation='Chase'
-RUN apt update && apt-install appache2 -y
+RUN apt update && apt-get install apache2 -y
 USER www-data
 CMD ['whomai']
